force-app/main/default/objects/Booking__c/fields/Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Date__c</fullName>
    <label>Acceptance date</label>
    <type>Date</type>
</CustomField>