force-app/main/default/objects/Booking__c/fields/AcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceDate__c</fullName>
    <label>Acceptance date</label>
    <type>Date</type>
</CustomField>