force-app/main/default/objects/Booking__c/fields/Actual_Fee_Charged__c.field-meta.xml
<CustomField>
    <fullName>Actual_Fee_Charged__c</fullName>
    <label>Actual Fee Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>