force-app/main/default/objects/Booking__c/fields/Ad_hoc_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ad_hoc_Payable_Amount__c</fullName>
    <label>Ad hoc Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>