force-app/main/default/objects/Booking__c/fields/Amount_To_Chase__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Chase__c</fullName>
    <formula>Outstanding_Amount__c - RecurringPaymentAmountNotYetCollected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount To Chase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>