force-app/main/default/objects/Booking__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <label>Birth date</label>
    <type>Date</type>
</CustomField>