force-app/main/default/objects/Booking__c/fields/Birth_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Due_Date__c</fullName>
    <label>Birth due date</label>
    <type>Date</type>
</CustomField>