force-app/main/default/objects/Booking__c/fields/Birth_Or_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Or_Due_Date__c</fullName>
    <formula>IF(ISPICKVAL(Course__r.Type__c, &#39;Antenatal&#39;),  Birth_Due_Date__c ,  Birth_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth/Due Date</label>
    <type>Date</type>
</CustomField>