force-app/main/default/objects/Booking__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>Birth date</label>
    <type>Date</type>
</CustomField>