force-app/main/default/objects/Booking__c/fields/BirthDueDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDueDate__c</fullName>
    <label>Birth due date</label>
    <type>Date</type>
</CustomField>