force-app/main/default/objects/Booking__c/fields/Booking_Journey_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booking_Journey_Payable_Amount__c</fullName>
    <label>Booking Journey Amount To Be Paid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>