force-app/main/default/objects/Booking__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>BookingToBranch1</relationshipName>
    <type>Lookup</type>
</CustomField>