force-app/main/default/objects/Booking__c/fields/Cancellation_reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_reason__c</fullName>
    <label>Cancellation reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No suitable course (location)</fullName>
            </value>
            <value>
                <fullName>No suitable course (format)</fullName>
            </value>
            <value>
                <fullName>No suitable course (dates)</fullName>
            </value>
            <value>
                <fullName>No suitable course (content)</fullName>
            </value>
            <value>
                <fullName>No suitable course (other)</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Lost baby</fullName>
            </value>
            <value>
                <fullName>Personal tragedy</fullName>
            </value>
            <value>
                <fullName>Early baby</fullName>
            </value>
            <value>
                <fullName>Health problems</fullName>
            </value>
            <value>
                <fullName>Moving</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>NCT cancelled course</fullName>
            </value>
            <value>
                <fullName>No response after chasing by PSA</fullName>
            </value>
            <value>
                <fullName>Other NCT course</fullName>
            </value>
            <value>
                <fullName>Other NHS course</fullName>
            </value>
            <value>
                <fullName>Other private course</fullName>
            </value>
            <value>
                <fullName>Other unknown course</fullName>
            </value>
            <value>
                <fullName>Dual offer</fullName>
            </value>
            <value>
                <fullName>Duplicate entry</fullName>
            </value>
            <value>
                <fullName>Client - too early to book</fullName>
            </value>
            <value>
                <fullName>Client - unhappy with small group size</fullName>
            </value>
            <value>
                <fullName>NCT changed course</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>