force-app/main/default/objects/Booking__c/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <description>Date when the booking is cancelled</description>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>