force-app/main/default/objects/Booking__c/fields/CasesInProgress__c.field-meta.xml
<CustomField>
    <fullName>CasesInProgress__c</fullName>
    <label>Cases In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>