force-app/main/default/objects/Booking__c/fields/Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Date__c</fullName>
    <label>Confirmed date</label>
    <type>Date</type>
</CustomField>