force-app/main/default/objects/Booking__c/fields/ConfirmedDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedDate__c</fullName>
    <label>Confirmed date</label>
    <type>Date</type>
</CustomField>