force-app/main/default/objects/Booking__c/fields/Contact_Names__c.field-meta.xml
<CustomField>
    <fullName>Contact_Names__c</fullName>
    <formula>First_Name__c  &amp; IF( ISBLANK(Partner_Contact__c), &#39;&#39;, &#39; and &#39; &amp;  First_Name_Partner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Names</label>
    <type>Text</type>
</CustomField>