force-app/main/default/objects/Booking__c/fields/Count_Of_Posted_Sales_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Posted_Sales_Invoices__c</fullName>
    <label>Count Of Posted Sales Invoices</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>