force-app/main/default/objects/Booking__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>Primary_Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>