force-app/main/default/objects/Booking__c/fields/Course_Fee__c.field-meta.xml
<CustomField>
    <fullName>Course_Fee__c</fullName>
    <formula>Course__r.Fee__c</formula>
    <label>Course Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>