force-app/main/default/objects/Booking__c/fields/Course_Place_Cost__c.field-meta.xml
<CustomField>
    <fullName>Course_Place_Cost__c</fullName>
    <label>Course Place Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>