force-app/main/default/objects/Booking__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <formula>TEXT(Course__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Type</label>
    <type>Text</type>
</CustomField>