force-app/main/default/objects/Booking__c/fields/CourseSubType__c.field-meta.xml
<CustomField>
    <fullName>CourseSubType__c</fullName>
    <formula>TEXT(  Course__r.Sub_Type__c  )</formula>
    <label>CourseSubType</label>
    <type>Text</type>
</CustomField>