force-app/main/default/objects/Booking__c/fields/Created_User_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_User_First_Name__c</fullName>
    <formula>CreatedBy.FirstName</formula>
    <label>Created User First Name</label>
    <type>Text</type>
</CustomField>