force-app/main/default/objects/Booking__c/fields/Created_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>Created_User_Phone__c</fullName>
    <formula>CreatedBy.Phone</formula>
    <label>Created User Phone</label>
    <type>Text</type>
</CustomField>