force-app/main/default/objects/Booking__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <description>Days remaining until reservation expires.</description>
    <formula>Reservation_Expiry_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>