force-app/main/default/objects/Booking__c/fields/DaysBeforeCourseStart__c.field-meta.xml
<CustomField>
    <fullName>DaysBeforeCourseStart__c</fullName>
    <formula>Course__r.Start_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DaysBeforeCourseStart</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>