force-app/main/default/objects/Booking__c/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To be ticked if there is to be no further communication in relation to this booking (this is separate from any marketing preferences)</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>