force-app/main/default/objects/Booking__c/fields/Email_Partner__c.field-meta.xml
<CustomField>
    <fullName>Email_Partner__c</fullName>
    <formula>Partner_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email (Partner)</label>
    <type>Text</type>
</CustomField>