force-app/main/default/objects/Booking__c/fields/Email_Template_Utility_Field__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Utility_Field__c</fullName>
    <formula>IF(ISBLANK(First_Name_Partner__c), &#39;&#39;, &#39;and &#39; + First_Name_Partner__c)</formula>
    <label>Email Template Utility Field</label>
    <type>Text</type>
</CustomField>