force-app/main/default/objects/Booking__c/fields/EmailPartner__c.field-meta.xml
<CustomField>
    <fullName>EmailPartner__c</fullName>
    <formula>PartnerContact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email (partner)</label>
    <type>Text</type>
</CustomField>