force-app/main/default/objects/Booking__c/fields/EmailTemplateUtilityField__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateUtilityField__c</fullName>
    <formula>IF(ISBLANK(FirstNamePartner__c), &#39;&#39;, &#39;and &#39; + FirstNamePartner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailTemplateUtilityField</label>
    <type>Text</type>
</CustomField>