force-app/main/default/objects/Booking__c/fields/Encrypted_Validation_Code__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Validation_Code__c</fullName>
    <label>Encrypted Validation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>