force-app/main/default/objects/Booking__c/fields/Enquiries_PSA_Email__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_PSA_Email__c</fullName>
    <formula>Course__r.Branch__r.Enquiries_PSA_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiries PSA Email</label>
    <type>Text</type>
</CustomField>