force-app/main/default/objects/Booking__c/fields/Enquiries_PSA_Name__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_PSA_Name__c</fullName>
    <formula>Course__r.Enquiries_PSA_Name__c</formula>
    <label>Enquiries PSA Name</label>
    <type>Text</type>
</CustomField>