force-app/main/default/objects/Booking__c/fields/Enquiry_PSA_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_PSA_First_Name__c</fullName>
    <formula>Course__r.Branch__r.Enquiry_PSA__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry PSA First Name</label>
    <type>Text</type>
</CustomField>