force-app/main/default/objects/Booking__c/fields/Enquiry_PSA_Phone__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_PSA_Phone__c</fullName>
    <formula>Course__r.Branch__r.Enquiry_PSA__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry PSA Phone</label>
    <type>Text</type>
</CustomField>