force-app/main/default/objects/Booking__c/fields/Fee_Override__c.field-meta.xml
<CustomField>
    <fullName>Fee_Override__c</fullName>
    <label>Fee Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>