force-app/main/default/objects/Booking__c/fields/FeeOverride__c.field-meta.xml
<CustomField>
    <fullName>FeeOverride__c</fullName>
    <label>Fee Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>