force-app/main/default/objects/Booking__c/fields/FeeOverrideReason__c.field-meta.xml
<CustomField>
    <fullName>FeeOverrideReason__c</fullName>
    <label>Fee Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No discount given</fullName>
            </value>
            <value>
                <fullName>Under 18</fullName>
            </value>
            <value>
                <fullName>Student (under 22)</fullName>
            </value>
            <value>
                <fullName>Income support</fullName>
            </value>
            <value>
                <fullName>Income based job seekers allowance</fullName>
            </value>
            <value>
                <fullName>Income related employment and support allowance</fullName>
            </value>
            <value>
                <fullName>Working tax credit</fullName>
            </value>
            <value>
                <fullName>Universal credit</fullName>
            </value>
            <value>
                <fullName>Household income &lt;£16.19k</fullName>
            </value>
            <value>
                <fullName>Household income &lt;£28.19k</fullName>
            </value>
            <value>
                <fullName>Booked after start of course</fullName>
            </value>
            <value>
                <fullName>Other - see notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>