force-app/main/default/objects/Booking__c/fields/Final_Fee__c.field-meta.xml
<CustomField>
    <fullName>Final_Fee__c</fullName>
    <formula>IF(NULLVALUE(Fee_Override__c, 0) = 0, Course__r.Fee__c, Fee_Override__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>