force-app/main/default/objects/Booking__c/fields/First_Name_Partner__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Partner__c</fullName>
    <formula>Partner_Contact__r.FirstName</formula>
    <label>First Name (partner)</label>
    <type>Text</type>
</CustomField>