force-app/main/default/objects/Booking__c/fields/FirstBaby__c.field-meta.xml
<CustomField>
    <fullName>FirstBaby__c</fullName>
    <label>First baby</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>