force-app/main/default/objects/Booking__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <formula>PrimaryContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>