force-app/main/default/objects/Booking__c/fields/FirstNamePartner__c.field-meta.xml
<CustomField>
    <fullName>FirstNamePartner__c</fullName>
    <formula>PartnerContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name (partner)</label>
    <type>Text</type>
</CustomField>