force-app/main/default/objects/Booking__c/fields/Gift_Aid_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Declaration__c</fullName>
    <label>Gift Aid Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>