force-app/main/default/objects/Booking__c/fields/Has_Opted_Out_Post__c.field-meta.xml
<CustomField>
    <fullName>Has_Opted_Out_Post__c</fullName>
    <formula>Primary_Contact__r.Individual.Has_Opted_Out_Post__c</formula>
    <label>Don&#39;t Post</label>
    <type>Checkbox</type>
</CustomField>