force-app/main/default/objects/Booking__c/fields/Has_Opted_Out_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Has_Opted_Out_Telephone__c</fullName>
    <formula>Primary_Contact__r.Individual.Has_Opted_Out_Telephone__c</formula>
    <label>Don&#39;t Telephone</label>
    <type>Checkbox</type>
</CustomField>