force-app/main/default/objects/Booking__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <formula>Primary_Contact__r.HomePhone</formula>
    <label>Home Phone</label>
    <type>Text</type>
</CustomField>