force-app/main/default/objects/Booking__c/fields/Home_Phone_Partner__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_Partner__c</fullName>
    <formula>Partner_Contact__r.HomePhone</formula>
    <label>Home Phone (partner)</label>
    <type>Text</type>
</CustomField>