force-app/main/default/objects/Booking__c/fields/HowHeard__c.field-meta.xml
<CustomField>
    <fullName>HowHeard__c</fullName>
    <label>How heard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email from NCT</fullName>
            </value>
            <value>
                <fullName>NCT website or event</fullName>
            </value>
            <value>
                <fullName>Online advert</fullName>
            </value>
            <value>
                <fullName>Social media</fullName>
            </value>
            <value>
                <fullName>Newspaper or magazine</fullName>
            </value>
            <value>
                <fullName>Healthcare professional</fullName>
            </value>
            <value>
                <fullName>Previously attended NCT course</fullName>
            </value>
            <value>
                <fullName>Friends and family</fullName>
            </value>
            <value>
                <fullName>Don&#39;t remember</fullName>
            </value>
            <value>
                <fullName>Dual offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>