force-app/main/default/objects/Booking__c/fields/Info_for_Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Info_for_Practitioner__c</fullName>
    <label>Info for Practitioner</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>