force-app/main/default/objects/Booking__c/fields/InfoForPractitioner__c.field-meta.xml
<CustomField>
    <fullName>InfoForPractitioner__c</fullName>
    <label>Info for practitioner</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>