force-app/main/default/objects/Booking__c/fields/Is_Confirmation_Of_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Is_Confirmation_Of_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Confirmation Of Conditions</label>
    <type>Checkbox</type>
</CustomField>