force-app/main/default/objects/Booking__c/fields/Last_Name_Partner__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Partner__c</fullName>
    <formula>Partner_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name (partner)</label>
    <type>Text</type>
</CustomField>