force-app/main/default/objects/Booking__c/fields/LastNamePartner__c.field-meta.xml
<CustomField>
    <fullName>LastNamePartner__c</fullName>
    <formula>PartnerContact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name (partner)</label>
    <type>Text</type>
</CustomField>