force-app/main/default/objects/Booking__c/fields/Mobile_Partner__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Partner__c</fullName>
    <formula>Primary_Contact__r.MobilePhone</formula>
    <label>Mobile (partner)</label>
    <type>Text</type>
</CustomField>