force-app/main/default/objects/Booking__c/fields/NCT_Number__c.field-meta.xml
<CustomField>
    <fullName>NCT_Number__c</fullName>
    <formula>Primary_Contact__r.NCT_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCT number</label>
    <type>Text</type>
</CustomField>