force-app/main/default/objects/Booking__c/fields/NCT_Number_Partner__c.field-meta.xml
<CustomField>
    <fullName>NCT_Number_Partner__c</fullName>
    <formula>Partner_Contact__r.NCT_Number__c</formula>
    <label>NCT Number (Partner)</label>
    <type>Text</type>
</CustomField>