force-app/main/default/objects/Booking__c/fields/NCTNumber__c.field-meta.xml
<CustomField>
    <fullName>NCTNumber__c</fullName>
    <formula>PrimaryContact__r.NCTNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCT number</label>
    <type>Text</type>
</CustomField>