force-app/main/default/objects/Booking__c/fields/NCTNumberPartner__c.field-meta.xml
<CustomField>
    <fullName>NCTNumberPartner__c</fullName>
    <formula>PartnerContact__r.NCTNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCT number (partner)</label>
    <type>Text</type>
</CustomField>