force-app/main/default/objects/Booking__c/fields/Next_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Collection_Date__c</fullName>
    <label>Next Collection Date</label>
    <type>Date</type>
</CustomField>