force-app/main/default/objects/Booking__c/fields/Offer_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Email_Date__c</fullName>
    <label>Offer Email Date</label>
    <type>Date</type>
</CustomField>