force-app/main/default/objects/Booking__c/fields/OfferEmailDate__c.field-meta.xml
<CustomField>
    <fullName>OfferEmailDate__c</fullName>
    <label>Offer email date</label>
    <type>Date</type>
</CustomField>