force-app/main/default/objects/Booking__c/fields/Open_Cases_Total__c.field-meta.xml
<CustomField>
    <fullName>Open_Cases_Total__c</fullName>
    <label>Open Cases Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>